fix XMLUtil and addProduct